--- a/src/assets/styles/scss/base/_typography.scss
+++ b/src/assets/styles/scss/base/_typography.scss
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css?family=Montserrat:400,500,700&display=swap&subset=cyrillic');
 
 body {
-  font-family: 'Montserrat', Helvetica, Arial, sans-serif;
+  font-family: $font-family;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   text-rendering: optimizeLegibility;
