--- a/src/assets/styles/scss/abstracts/_variables.scss
+++ b/src/assets/styles/scss/abstracts/_variables.scss
@@ -9,6 +9,8 @@ $lime: #CDDC39;
 // font
 $font-family: 'Montserrat', Helvetica, Arial, sans-serif;
 
+$navbarHeight: 65px;
+
 // :export {
 //   sideBar: $red;
 // }
