--- a/src/assets/styles/scss/abstracts/_variables.scss
+++ b/src/assets/styles/scss/abstracts/_variables.scss
@@ -6,6 +6,7 @@ $blue: #00B0FF;
 $gray: #4A4A4A;
 $lime: #CDDC39;
 
+$main: $red;
 // font
 $font-family: 'Montserrat', Helvetica, Arial, sans-serif;
 
