--- a/src/assets/styles/scss/components/buttons.scss
+++ b/src/assets/styles/scss/components/buttons.scss
@@ -14,3 +14,19 @@
     box-shadow: 0px 10px 30px rgba(0, 0, 0, 0.2);
   }
 }
+
+.button {
+  display: block;
+  font-size: 16px;
+  font-weight: 600;
+  color: white;
+  background: $main;
+  border: 0;
+  border-radius: 50px;
+  min-height: 50px;
+  padding: 0 24px;
+  transition: opacity 0.3s ease-out;
+  &:hover {
+    opacity: .8;
+  }
+}
