fix sidebar and to start bem refactor

--- a/src/assets/styles/scss/main.scss
+++ b/src/assets/styles/scss/main.scss
@@ -5,4 +5,5 @@
 @import './base/typography';
 @import './base/animation';
 
-@import './components/buttons.scss'
+@import './components/buttons.scss';
+@import './components/input.scss';
