--- a/src/assets/styles/scss/components/buttons.scss
+++ b/src/assets/styles/scss/components/buttons.scss
@@ -1,4 +1,4 @@
-.circle-btn {
+.button-circle {
   background: white;
   box-shadow: 0px 10px 30px rgba(0, 0, 0, 0.1);
   border: 0;
@@ -19,8 +19,8 @@
   display: block;
   font-size: 16px;
   font-weight: 600;
-  color: white;
-  background: $main;
+  color: $gray;
+  background: none;
   border: 0;
   border-radius: 50px;
   min-height: 50px;
@@ -29,4 +29,9 @@
   &:hover {
     opacity: .8;
   }
+}
+
+.button-primary {
+  background: $main;
+  color: white;
 }
