--- a/src/assets/styles/scss/components/buttons.scss
+++ b/src/assets/styles/scss/components/buttons.scss
@@ -8,8 +8,16 @@
   font-size: 30px;
   font-weight: bold;
   color: $gray;
-  padding-bottom: 6px;
+  padding: 0;
+  padding-bottom: 5px;
   transition: box-shadow 0.5s ease-in-out;
+
+  @include for-phone {
+    height: 45px;
+    width: 45px;
+    font-size: 25px;
+  }
+
   &:hover {
     box-shadow: 0px 10px 30px rgba(0, 0, 0, 0.2);
   }
